--- a/.gitignore
+++ b/.gitignore
@@ -7055,3 +7055,17 @@ build/Civ6DrafPy/localpycs/struct.pyc
 .venv/Scripts/watchfiles.exe
 .venv/Scripts/watchmedo.exe
 .venv/share/man/man1/qr.1
+build/main/Analysis-00.toc
+build/main/base_library.zip
+build/main/EXE-00.toc
+build/main/main.pkg
+build/main/PKG-00.toc
+build/main/PYZ-00.pyz
+build/main/PYZ-00.toc
+build/main/warn-main.txt
+build/main/xref-main.html
+build/main/localpycs/pyimod01_archive.pyc
+build/main/localpycs/pyimod02_importers.pyc
+build/main/localpycs/pyimod03_ctypes.pyc
+build/main/localpycs/pyimod04_pywin32.pyc
+build/main/localpycs/struct.pyc
